Feat: 관리자 페이지 배너 삭제 시 S3 객체 삭제 추가