@@ -25,6 +25,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -50,7 +51,7 @@ public class ClubPostService {
                                 .findFirst()
                                 .map(ClubPostImage::getImagePath).orElse(null))
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
         return new PageImpl<>(clubPostResList, pageable, posts.getTotalElements());
     }
